--- a/index.html
+++ b/index.html
@@ -5,12 +5,67 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MaxCoach - Online Courses, Personal Coaching & Education WP Theme Preview - ThemeForest</title>
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-32x32.png">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet"> 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/style.css">
     <script src="https://cdn.jsdelivr.net/npm/vue@2"></script>
 </head>
 <body>
-    
+    <!-- * contenitore -->
+    <div id="root" class="contenitore">
 
+        <!-- *header -->
+        <header></header>
+        <!-- * /header -->
+
+        <!-- * jumbotron -->
+        <div class="jumbo"></div>
+        <!-- * /jumbotron -->
+
+        <!-- * main -->
+        <main>
+            <!-- ! sezione learn-about -->
+            <section id="learn-about"></section>
+            <!-- ! /sezione learn-about --> 
+
+            <!-- ! sezione numeri -->
+            <section id="numeri"></section>
+            <!-- ! /sezione numeri -->
+
+            <!-- ! sezione upgrade-skills -->
+            <section id="upgrade-skills"></section>
+            <!-- ! /sezione upgrade-skills -->
+
+            <!-- ! sezione online-courses -->
+            <section id="online-courses"></section>
+            <!-- ! /sezione online-courses -->
+
+            <!-- ! sezione people -->
+            <section id="people"></section>
+            <!-- ! /sezione people -->
+
+            <!-- ! sezione transform-you -->
+            <section id="transform-you"></section>
+            <!-- ! /sezione transform-you -->
+
+            <!--! sezione blog -->
+            <section id="blog"></section>
+            <!--! /sezione blog -->
+
+            <!-- ! sezione subscribe -->
+            <section id="subscribe"></section>
+            <!-- ! /sezione subscribe -->
+        </main>
+        <!-- * /main -->
+
+        <!-- * footer -->
+        <footer></footer>
+        <!-- * /footer -->
+
+    </div>
+    <!-- * /contenitore -->
     <script src="js/script.js"></script>
 </body>
 </html>
