prove prima sezione

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 <i class="far fa-user-circle"></i>
                 <div class="casella-input">
                     <input type="text" placeholder="Search..">
+                    <i class="fas fa-search"></i>
                 </div>
-                <i class="fas fa-search"></i>
             </div>
             <!-- ! /header-dx -->
         </header>
@@ -64,7 +64,18 @@
         <!-- * main -->
         <main>
             <!-- ! sezione learn-about -->
-            <section id="learn-about"></section>
+            <section id="learn-about">
+                <div class="testo-learn-about">
+                    <h2>Learn about our <span>Work Culture</span> at MaxCoach</h2>
+                    <p>Spend some time to visit our website or head office and discover our current courses, enrollment procedure, and registration deadline. We're opening new classes every beginning of each month.</p>
+                    <small>Have questions? <span>Get Free Guide <i class="fas fa-long-arrow-alt-right"></i></span></small>
+                </div>
+                <div class="img-learn-about">
+                    <img class="decorazione" src="img/maxcoach-shape-07.png" alt="decorazione">
+                    <img class="img-base" src="img/stock-full-hd-10-ohki1ayywq3cqutettrncduujpoaorifqu4relt2ts.jpg" alt="zona meeting">
+                    <img class="img-sovrapposta" src="img/about-us-01-ohkia3qg98rq9vg3s0mn2hkflr1migdqdw370qnegc.jpg" alt="donna al pc">
+                </div>
+            </section>
             <!-- ! /sezione learn-about --> 
 
             <!-- ! sezione numeri -->
