--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                             <div class="avatar">
                                 <img src="img/testimonial-avata-01.jpg" alt="avatar">
                                 <h5>Madley Pondor
-                                    <small>/ IT Specialis</small>
+                                    <small>/ IT Specialist</small>
                                 </h5>
                             </div>
                         </div>
@@ -175,11 +175,31 @@
             <!-- ! /sezione people -->
 
             <!-- ! sezione transform-you -->
-            <section id="transform-you"></section>
+            <section id="transform-you">
+                <div class="contenitore-transform-you">
+                    <div class="img-transform-you">
+                        <img class="img-base" src="img/home-3-team-image.png" alt="persone avatar">
+
+                        <img class="decorazione-3" src="img/maxcoach-shape-05.png" alt="decorazione-3">
+
+                        <img class="decorazione-1" src="img/maxcoach-shape-07.png" alt="decorazione-1">
+
+                        <img class="decorazione-4" src="img/maxcoach-shape-01.png" alt="decorazione-4">
+                    </div>
+                    <div class="testo-transform-you">
+                        <h4>Everything <strong>in maxcoach</strong></h4>
+                        <h2>We're Here To <span>Transform</span> You!</h2>
+                        <p>As learners, people can enjoy great companionship from MaxCpach mentors and educators. We can help you develop and grow at your best.</p>
+
+                        <button>Get Free Guide</button>
+                    </div>
+                </div>
+            </section>
             <!-- ! /sezione transform-you -->
 
             <!--! sezione blog -->
-            <section id="blog"></section>
+            <section id="blog">
+            </section>
             <!--! /sezione blog -->
 
             <!-- ! sezione subscribe -->
