decorazioni ricreate con photoshop

--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
                         <img class="logo-youtube" src="img/icon-youtube-play.png" alt="logo youtube">
                         <img class="decorazione-3" src="img/maxcoach-shape-05-100x100.png" alt="decorazione-3">
                         <img class="decorazione-2" src="img/maxcoach-shape-07-100x100.png" alt="decorazione-2">
+
+                        <img class="decorazione-5" src="img/decorazione-2.png" alt="decorazione-5">
                     </div>
                     <div class="upgrade-skills-dx">
                         <h4>How we work</h4>
@@ -209,6 +211,8 @@
                         <img class="decorazione-1" src="img/maxcoach-shape-07.png" alt="decorazione-1">
 
                         <img class="decorazione-4" src="img/maxcoach-shape-01.png" alt="decorazione-4">
+
+                        <img class="decorazione-5" src="img/decorazione.png" alt="decorazione-5">
                     </div>
                     <div class="testo-transform-you">
                         <h4>Everything <strong>in maxcoach</strong></h4>
