--- a/index.html
+++ b/index.html
@@ -183,6 +183,19 @@
                     </div>
 
                     <div class="card-people">
+                        <div class="box-card-sopra">
+                            <h4>Professional team of specialists and passionate mentors at reach</h4>
+
+                            <h4>I need to get a certification for English proficiency and MaxCoach is my best choice. Their tutors are smart ad professional when dealing with students.</h4>
+
+                            <div class="avatar">
+                                <img src="img/testimonial-avata-03.jpg" alt="avatar">
+                                <h5>Madley Pondor
+                                    <small>/ IT Specialist</small>
+                                </h5>
+                            </div>
+                        </div>
+
                         <div class="box-card">
                             <h4>Professional team of specialists and passionate mentors at reach</h4>
 
@@ -195,7 +208,22 @@
                                 </h5>
                             </div>
                         </div>
+
+                        <div class="box-card-sotto">
+                            <h4>Professional team of specialists and passionate mentors at reach</h4>
+
+                            <h4>I need to get a certification for English proficiency and MaxCoach is my best choice. Their tutors are smart ad professional when dealing with students.</h4>
+
+                            <div class="avatar">
+                                <img src="img/testimonial-avata-02.jpg" alt="avatar">
+                                <h5>Mina Hollace
+                                    <small>/ Freelancer</small>
+                                </h5>
+                            </div>
+                        </div>
                     </div>
+
+                    
                 </div>
             </section>
             <!-- ! /sezione people -->
