salvo email inserite in array in ordine alfabetico

--- a/index.html
+++ b/index.html
@@ -184,14 +184,14 @@
 
                     <div class="card-people">
                         <div class="box-card-sopra">
-                            <h4>Professional team of specialists and passionate mentors at reach</h4>
+                            <h4>The MaxCoach team works really hard to high level of quality</h4>
 
-                            <h4>I need to get a certification for English proficiency and MaxCoach is my best choice. Their tutors are smart ad professional when dealing with students.</h4>
+                            <h4>I am happy with their arrangment of lessons and subjects. They......</h4>
 
                             <div class="avatar">
                                 <img src="img/testimonial-avata-03.jpg" alt="avatar">
-                                <h5>Madley Pondor
-                                    <small>/ IT Specialist</small>
+                                <h5>X
+                                    <small>X</small>
                                 </h5>
                             </div>
                         </div>
@@ -291,7 +291,7 @@
                     </div>
 
                     <div class="input-subscribe">
-                        <input type="email" placeholder="Enter your email"><button>Subscribe</button>
+                        <input @keyup.enter="salvaEmails" v-model="valoreEmail" type="email" placeholder="Enter your email"><button @click="salvaEmails">Subscribe</button>
                     </div>
 
                     <img class="decorazione-3" src="img/maxcoach-shape-02.png" alt="decorazione-3">
