--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 <i class="fas fa-bars"></i>
             </div>
             <div class="tendina" :class="visibile">
+                <i @click="dropDownMenu" class="fas fa-times"></i>
                 <div class="el-tendina" v-for="elementi in sezioniPagina">
                     <a :href="elementi.sezione">{{ elementi.nome }}</a>
                 </div>
@@ -321,7 +322,7 @@
                     </div>
                     <ul>
                         <li v-for="social in socials">
-                            <i :class="'fab fa-' + social.tipo"></i>
+                            <i :class="social.prefisso + social.tipo"></i>
                         </li>
                     </ul>
                 </div>
